# ai-telegram-bot

./: .env  .gitignore  README.md  configure.py  main.py  pyproject.toml
configs/: __config__.py  __init__.py  chatgpt-ai.json.example  gpt-ai.json.example  mongo-db.json.example  stable-diffusion-ai.json.example  telegram-bot.json.example  users.json.example
handlers/: __init__.py
handlers/chatgpt/: __init__.py  chatgpt.py
handlers/llama/: __init__.py  llama.py
handlers/stable_diffusion/: __init__.py  sd.py
utils/: __init__.py
utils/ai/: __init__.py  chatgpt.py  stable_diffusion.py
utils/application/: __init__.py  telegram.py
utils/configs/: __init__.py  aiconfig.py  botconfig.py  config.py  dbconfig.py
utils/database/: __init__.py  mysql.py
utils/user/: __init__.py  user.py
