[tool.poetry]
name = "ai-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Abdulla <m.m.abdul@mail.ru>"]
readme = "README.md"
packages = [{include = "ai_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
openai = "^0.27.4"
pymongo = "^4.3.3"
webuiapi = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"